--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -61,6 +61,51 @@ jobs:
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
+
+  sonar-frontend:
+    runs-on: Agent-1
+    needs: trivy_fs_scan
+    
+    steps:
+﻿﻿     - name: Checkout code
+       uses: actions/checkout@v4
+           
+     - ﻿﻿name: SonarQube Scan (client)
+       uses: sonarsource/sonarqube-scan-action@master 
+       with:
+         projectBaseDir: client   # $ instead of working-directory
+         args: >
+           -Dsonar.projectKey=myorg_client
+﻿           -Dsonar projectName-myorg_client
+﻿﻿           -Dsonar. sources=•
+           -﻿Dsonar.exclusions=**/node_modules/**, **/dist/**,**/build/**
+       env :
+        SONAR TOKEN: $t secrets.SONAR_TOKEN }}
+        SONAR_HOST URL: $ff secrets. SONAR_HOST_URL |}
+
+        
+  sonar-backend:
+    runs-on: Agent-1
+    needs: sonar-frontend
+    
+    steps:
+﻿﻿     - name: Checkout code
+       uses: actions/checkout@v4
+           
+     - ﻿﻿name: SonarQube Scan (client)
+       uses: sonarsource/sonarqube-scan-action@master 
+       with:
+         projectBaseDir: api   # $ instead of working-directory
+         args: >
+           -Dsonar.projectKey=myorg_client
+﻿           -Dsonar projectName-myorg_client
+﻿﻿           -Dsonar. sources=•
+           -﻿Dsonar.exclusions=**/node_modules/**, **/dist/**,**/build/**
+       env :
+        SONAR TOKEN: $t secrets.SONAR_TOKEN }}
+        SONAR_HOST URL: $ff secrets. SONAR_HOST_URL |}
+
+        
       
     
     
