--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -222,7 +222,7 @@ jobs:
       - name: Configure kubeconfig
         run: |
           mkdir -p $HOME/.kube
-          echo "${{ secrets.EKS_KUBECONFIG }}" > $HOME/.kube/config
+          echo "${{ secrets.EKS_KUBECONFIG }}" | base64 -d > $HOME/.kube/config
 
       - name: Deploy to EKS
         run: |
